# Homework_NSU

./: .appveyor.yml  CMakeLists.txt  README.md  appveyor.yml  building.bat  building.cmd  building.ps1  building.sh
.github/workflows/: cmake.yml
2-мерные массивы/: README.md
2-мерные массивы/Значения многочлена, заданного 2-мерным массивом/: README.md  main.c
2-мерные массивы/Копирование значений 2-мерного массива/: README.md  main.c
2-мерные массивы/Сумма элементов 2-мерного массива/: README.md  main.c
2-мерные массивы/Число нулевых строк в 2-мерном массиве/: README.md  main.c
N-арные деревья/: README.md
N-арные деревья и др. типы данных/: README.md
N-арные деревья и др. типы данных/Список значений дерева при постфиксном обходе/: README.md  main.c
N-арные деревья и др. типы данных/Список значений дерева при префиксном обходе/: README.md  main.c
N-арные деревья/Высота/: README.md  main.c
N-арные деревья/Максимальное значение/: README.md  main.c
N-арные деревья/Освобождение памяти/: README.md
N-арные деревья/Печать по уровням/: CMakeLists.txt  README.md
Деревья двоичного поиска/: README.md
Деревья двоичного поиска/Добавить значение/: README.md  main.c
Деревья двоичного поиска/Максимальное значение/: README.md  main.c
Деревья двоичного поиска/Поиск значения/: README.md  main.c
Деревья двоичного поиска/Предыдущее максимальному значение/: README.md  main.c
Деревья двоичного поиска/Проверить на корректность/: README.md  main.c
Деревья двоичного поиска/Удалить значение/: README.md  main.c
Деревья и другие типы данных/: README.md
Деревья и другие типы данных/АВЛ дерево/: README.md  main.c
Деревья и другие типы данных/АВЛ дерево заданной высоты/: main.c
Деревья и другие типы данных/Возрастающий список в ДДП/: README.md  main.c
Деревья и другие типы данных/ДДП в возрастающий список/: README.md  main.c
Деревья и другие типы данных/ДДП в массив/: README.md  main.c
Деревья и другие типы данных/ДДП в список/: main.c
Деревья и другие типы данных/ДДП в убывающий список/: README.md  main.c
Деревья и другие типы данных/Максимальное АВЛ дерево заданной высоты/: README.md  main.c
Деревья и другие типы данных/Массив в ДДП/: README.md  main.c
Деревья и другие типы данных/Минимальное АВЛ дерево заданной высоты/: README.md  main.c
Деревья и другие типы данных/Убывающий список в ДДП/: README.md  main.c
Динамическое программирование/Башня из кубиков/: CMakeLists.txt  main.c
Динамическое программирование/Задача про лягушку DP/: main.c
Задачи для прошаренных/Команда dir/: CMakeLists.txt  README.md  main.c
Задачи для прошаренных/Манипуляции с битами/: README.md  main.c
Задачи для прошаренных/Словарь - бинарное дерево/: README.md  main.c
Задачи повышенной сложности/MergeSort/: README.md  main.c
Задачи повышенной сложности/Арифметическая прогрессия/: README.md  main.c
Задачи повышенной сложности/Задача про лягушку DP/: README.md  main.c
Задачи повышенной сложности/Максимальная частичная сумма/: README.md  main.c
Задачи повышенной сложности/Найти пропущенное число/: README.md  main.c
Задачи повышенной сложности/Периметр выпуклой оболочки/: CMakeLists.txt  README.md  main.c
Задачи повышенной сложности/Сдвиг при умножении на последнюю цифру/: README.md  main.c
Задачи повышенной сложности/Число путей длины Х вершин в графе/: README.md  main.c
Задачи с void/: README.md
Задачи с void звёздочка/Количество элементов массива равных value/: CMakeLists.txt  README.md  main.c
Задачи с void звёздочка/Преобразование элементов массива/: README.md  main.c
Задачи с void звёздочка/Проверка упорядоченности массива/: README.md
Задачи с void/Преобразование элементов массива/: main.c
Задачи с void/Проверка упорядоченности массива/: main.c
Задачи с двусвязным списком/Добавление в двусвязный список/: main.c
Задачи с двусвязным списком/Удаление двусвязного списка/: README.md
Задачи с несколькими списками/: README.md
Задачи с несколькими списками/Объединение 2 неубывающих списков/: README.md  main.c
Задачи с несколькими списками/Перевернуть список/: README.md  main.c
Задачи с несколькими списками/Разделить список на 2 списка/: main.c
Задачи с несколькими списками/Разделить список на неубывающие списки/: CMakeLists.txt  README.md  main.c
Задачи с несколькими списками/Фильтрация списка/: README.md  main.c
Задачи с одним списком/: README.md
Задачи с одним списком 2/Голову в конец списка/: main.c
Задачи с одним списком 2/Удалить n элемент списка/: main.c
Задачи с одним списком/Голову в конец списка/: README.md  main.c
Задачи с одним списком/Освобождение памяти после списка/: README.md  main.c
Задачи с одним списком/Печать списка/: README.md
Задачи с одним списком/Список цифр десятичного числа/: README.md  main.c
Задачи с одним списком/Сумма элементов списка/: README.md  main.c
Задачи с одним списком/Удалить n элемент списка/: README.md  main.c
Задачи с одним списком/Удалить повторяющиеся элементы/: README.md  main.c
Задачи с циклическими списками/Добавление в циклический список/: README.md
Задачи с циклическими списками/Печать циклического списка/: README.md
Задачи с циклическими списками/Удаление из циклического списка/: README.md  main.c
Интринсики/Скалярное произведение/: README.md  main.c
Интринсики/Транспонирование марицы/: main.c
Интринсики/Транспонирование матрицы/: README.md
Мне нечего делать/Семки есть/: main.cpp
Мне нечего делать/Списки/: list.c  list.h  main.c
Побитовые операции/: README.md
Побитовые операции/Количество единичных битов/: README.md  main.c
Побитовые операции/Перевернуть биты/: CMakeLists.txt  (+2 more)
Потоки/Барьер/: CMakeLists.txt  README.md  main.c
Потоки/Копирование массива/: CMakeLists.txt  README.md  main.c
Преобразование двоичных деревьев/: README.md
Простые задачи с двоичными деревьями/: README.md
Разные задачи/: README.md
Разные задачи со списками/: README.md
Структуры и т.п/: README.md  main.c
Циклы и массивы/: README.md
Циклы и простые типы/: README.md
Циклы и простые типы/Число ПИ/: CMakeLists.txt  README.md  main(переделанная).c  main.c
(+90 files in other folders)
